--- a/src/components/hamburgermenu/HamburgerMenu.module.css
+++ b/src/components/hamburgermenu/HamburgerMenu.module.css
@@ -1,5 +1,5 @@
 /* ハンバーガーメニューのコンテナのスタイル */
-.hamburger-menu {
+.hamburgerMenu {
   position: fixed;
   /* 固定位置に設定 */
   top: 20px;
@@ -11,7 +11,7 @@
 }
 
 /* ハンバーガーアイコンのスタイル */
-.hamburger-icon {
+.hamburgerIcon {
   display: flex;
   /* フレックスボックスを使用 */
   flex-direction: column;
@@ -31,7 +31,7 @@
 }
 
 /* ハンバーガーアイコンのバーのスタイル */
-.hamburger-icon .bar {
+.hamburgerIcon .bar {
   width: 100%;
   /* 幅を100%に設定 */
   height: 4px;
@@ -43,19 +43,19 @@
 }
 
 /* メニューが開いているときの1番目のバーのスタイル */
-.hamburger-icon[aria-expanded='true'] .bar:nth-child(1) {
+.hamburgerIcon[aria-expanded='true'] .bar:nth-child(1) {
   transform: rotate(45deg) translate(5px, 5px);
   /* 回転と移動を設定 */
 }
 
 /* メニューが開いているときの2番目のバーのスタイル */
-.hamburger-icon[aria-expanded='true'] .bar:nth-child(2) {
+.hamburgerIcon[aria-expanded='true'] .bar:nth-child(2) {
   opacity: 0;
   /* 不透明度を0に設定 */
 }
 
 /* メニューが開いているときの3番目のバーのスタイル */
-.hamburger-icon[aria-expanded='true'] .bar:nth-child(3) {
+.hamburgerIcon[aria-expanded='true'] .bar:nth-child(3) {
   transform: rotate(-45deg) translate(7px, -6px);
   /* 回転と移動を設定 */
 }
@@ -150,4 +150,11 @@
   /* ホワイトスペースをnowrapに設定 */
   border: 0;
   /* ボーダーをなしに設定 */
+}
+
+/* フォーカス状態の統一表現 */
+.hamburgerIcon:focus,
+.hamburgerIcon:focus-visible {
+  outline: var(--focus-outline-width) solid var(--focus-outline-color);
+  outline-offset: var(--focus-outline-offset);
 }
