--- a/src/components/loadingfallback/LoadingFallback.module.css
+++ b/src/components/loadingfallback/LoadingFallback.module.css
@@ -14,7 +14,7 @@
   background-repeat: no-repeat;
   opacity: 1;
   will-change: opacity;
-  transition: opacity 300ms ease-in;
+  transition: opacity 7000ms linear;
 }
 
 .loadingContent {
@@ -124,7 +124,7 @@
 }
 
 .loadingFallback.fading {
-  animation: fadeOut 5s ease-in-out;
+  animation: fadeOut 3s ease-in-out;
 }
 
 .visuallyHidden {
@@ -187,7 +187,6 @@
 }
 
 @media (prefers-reduced-motion: reduce) {
-
   .loadingFallback,
   .loadingContent,
   .progressIndicator {
